fix(next): fix layout shift of VideoPlayer

--- a/packages/next/src/components/strapi/VideoPlayer.module.scss
+++ b/packages/next/src/components/strapi/VideoPlayer.module.scss
@@ -33,6 +33,10 @@
   :global(.vds-video-layout .vds-load-container .vds-play-button) {
     background: rgba(0, 0, 0, 0.06);
   }
+
+  :global(.vds-tooltip-content:not([data-visible])) {
+    display: none;
+  }
 }
 
 //.player :global(.vds-slider-track) {
